fix: static nginx file is replaced by dynamic config which fetch directly by inventory generated by terraform (fixes #2)

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,7 @@ on:
 env:
   PROJECT_NAME: ${{secrets.PROJECT_NAME}}
   ENVIRONMENT: ${{secrets.ENVIRONMENT}}
+  PRIVATE_KEY:
 
 jobs:
     infrastructure-creation:
