feat: updated ansible by adding addtional role called app-deployment which can copy the code and create the service file and start the service if updated it will restart. Also updated workflow ansible-configuration job to execute the playbooks (fixes #6)

--- a/ansible/provisioning.yaml
+++ b/ansible/provisioning.yaml
@@ -11,3 +11,10 @@
   become: yes
   roles:
     - nginx
+
+- name: Deploying application in web-servers
+  hosts:
+    - web-server
+  become: yes
+  roles:
+    - app-deployment
