fix: Ansible code is updated with new inventory file generated from terraform template, application is deploying successfully (fixes #10)

--- a/ansible/provisioning.yaml
+++ b/ansible/provisioning.yaml
@@ -1,6 +1,8 @@
 ---
 - name: Installing packages in all hosts
-  hosts: all
+  hosts:
+    - proxy-server
+    - deployment-servers
   become: yes
   roles:
     - install-packages
@@ -14,7 +16,7 @@
 
 - name: Deploying application in web-servers
   hosts:
-    - web-server
+    - deployment-servers
   become: yes
   roles:
     - app-deployment
