--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,7 @@ host_key_checking = False
 inventory = ./inventory.ini
 forks = 5
 log_path = ./log/ansible.log
+ansible_timeout = 60
 
 [privilege_escalation]
 become = true
